feat: new visionary ability Appeasement